// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hitsPerPage() calls twice render(<Selector props />, container) 1`] = `
<div
  className="ais-HitsPerPage custom-root cx"
>
  <Selector
    cssClasses={
      Object {
        "option": "ais-HitsPerPage-option custom-option",
        "root": "ais-HitsPerPage custom-root cx",
        "select": "ais-HitsPerPage-select custom-select",
      }
    }
    currentValue={10}
    options={
      Array [
        Object {
          "isRefined": true,
          "label": "10 results",
          "value": 10,
        },
        Object {
          "isRefined": false,
          "label": "20 results",
          "value": 20,
        },
      ]
    }
    setValue={[Function]}
  />
</div>
`;

exports[`hitsPerPage() renders transformed items 1`] = `
<div
  className="ais-HitsPerPage"
>
  <Selector
    cssClasses={
      Object {
        "option": "ais-HitsPerPage-option",
        "root": "ais-HitsPerPage",
        "select": "ais-HitsPerPage-select",
      }
    }
    currentValue={10}
    options={
      Array [
        Object {
          "isRefined": true,
          "label": "10 results",
          "transformed": true,
          "value": 10,
        },
        Object {
          "default": true,
          "isRefined": false,
          "label": "20 results",
          "transformed": true,
          "value": 20,
        },
      ]
    }
    setValue={[Function]}
  />
</div>
`;
